--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PQS7IE6;Database=bookstore;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=DESKTOP-PQS7IE6\\SQLEXPRESS;Database=bookstore;Trusted_Connection=True;TrustServerCertificate=true;"
   }
 }
